Cleaned up some files / Fixed footer on mobile / Made new site buttons actually do what they should / Added new site to the projects list

--- a/style.css
+++ b/style.css
@@ -34,19 +34,15 @@ a {
     color: white;
     z-index: 100000;
     padding-bottom: 10px;
+    padding-left: 10px;
  }
  .footer .PrivacyPolicy{
      color: white;
-     padding-left: 10px;
      font-size: 15px;
  }
  .footer .Copyright{
-     position: fixed;
-     left: 96.6%;
-     bottom: 0;
      color: white;
      font-size: 15px;
-     padding-bottom: 10px;
  }
 /* Header Section */
 #header {
@@ -193,7 +189,7 @@ a {
 }
 #hero .scrolldown{
     position: absolute;
-    bottom: 20px;
+    bottom: 5px;
     left: 50%;
     width: 40px;
     height: 40px;
@@ -340,7 +336,7 @@ a {
     flex-direction: column;
 }
 #projects .project-item{
-    display: flex;
+    display: fixed;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -579,7 +575,7 @@ a {
 #accounts .email{
     display: inline-block;
     margin-top: 50px;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: cornflowerblue;
 }
 /* End of Accounts Section */
